--- a/css/style.css
+++ b/css/style.css
@@ -20,5 +20,130 @@ body {
 
     --color_btn_order_now: #dd0000;
     --color_btn_order_now_hover: #a40000;
+}
 
+@font-face {
+    font-family: Roboto-Bold;
+    src: url(../fonts/Roboto-Bold.ttf);
+}
+
+@font-face {
+    font-family: Roboto-Medium;
+    src: url(../fonts/Roboto-Medium.ttf);
+}
+
+@font-face {
+    font-family: Roboto-Regular;
+    src: url(../fonts/Roboto-Regular.ttf);
+}
+
+@font-face {
+    font-family: Roboto-Thin;
+    src: url(../fonts/Roboto-Thin.ttf);
+}
+
+h1{
+    font-family: Roboto-Bold;
+    font-size: 32px;
+    color: var(--color_h1);
+    font-weight: bold;
+    text-transform: uppercase;
+}
+
+h2{
+    font-family: Roboto-Bold;
+    font-size: 28px;
+    color: var(--color_h2);
+    font-weight: bold;
+    text-transform: uppercase;
+}
+
+h3{
+    font-family: Roboto-Medium;
+    font-size: 22px;
+    color: var(--color_h3);
+    text-transform: uppercase;
+}
+
+h4{
+    font-family: Roboto-Medium;
+    font-size: 18px;
+    color: var(--color_h4);
+    text-transform: uppercase;
+}
+
+p.text {
+    font-size: 18px;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    color: var(--color_p_text);
+}
+
+/* ------------------ HEADER ----------------------- */
+
+header .bg_main_2 {
+    background-color: var(--color_main_2);
+    background-image: url(../images/Bg1.svg);
+    height: 57px;
+}
+
+header span, header a {
+    font-size: 20px;
+    color: #3f6584;
+    font-weight: 250;
+    font-family: "Roboto-Thin";
+    line-height: 57px;
+}
+
+header a {
+    font-family: "Roboto-Regular";
+}
+
+header span:first-child {
+    padding-right: 15px;
+}
+
+header a {
+    color: #caddea;
+    text-decoration: none;
+}
+
+header a img{
+    height: 25px;
+    vertical-align: middle;
+}
+
+.login {
+    display: flex;
+    justify-content: flex-end;
+}
+
+.login a {
+    display: inline-block;
+    text-transform: uppercase;
+    padding: 0 20px;
+}
+
+header .bg_main_1 {
+    background-color: var(--color_main_1);
+    height: 50px;
+}
+
+.bg_main_1 {
+    color: #caddea;
+    text-transform: uppercase;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+}
+
+.bg_main_1 .col{
+    text-align: center;
+    font-family: Roboto-Regular;
+    font-size: 20px;
+}
+
+.bg_main_1 a:hover {
+    background-color: #caddea;
+    color: var(--color_main_1);
+    padding: auto;
 }
